<resources>
    <string name="app_name">JobIn</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot your password ? </string>
    <string name="your_email">example@exmapl.com</string>
    <string name="email">Email</string>
    <string name="reset_now">Reset your password</string>
    <string name="the_place_where_you_can_find_your_job">The place where you can find your job</string>
    <string name="do_not_have_an_account" >Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="register_now">Create your account now</string>

    <string name="continue_registration">Continue</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email">"Invalid Email "</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_account_to_continue">Create an account to continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="at_least_1_number">At least 1 number</string>
    <string name="upper_and_lower_case">Upper and lower case</string>
    <string name="match_password">Match password</string>
    <string name="or_with">or with</string>
    <string name="already_have_account">Already have an account !</string>
    <string name="residance_country">Residence Country</string>
    <string name="search">Search</string>
    <string name="search_country">Search Country</string>
    <string name="almost_done">Almost Done</string>
    <string name="fill_your_information">Fill your information and now you will be ready to use JOBIN</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="invalid_login">invalid_login</string>
    <string name="date_of_birth" translatable="false">"Date of birth "</string>
    <string name="sign_up">Sign up</string>
    <string name="Continue">Continue</string>
    <string name="Enter_email">Enter the email address associated with your account and we&apos;ll send you a link to reset your password.</string>
    <string name="Email_address">Example@example.com</string>
    <string name="Reset_password">Reset Password</string>
</resources>