<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/shape_white_rounded_top"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">





 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/shape_gradient_basic_background"
     android:weightSum="10">

     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="7">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteX="120dp"
             tools:layout_editor_absoluteY="94dp">

             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/login" />

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/croissant_one_regular"
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                 android:textColor="@color/white_theme"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView" />

             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/the_place_where_you_can_find_your_job"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/white_theme"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintStart_toStartOf="@+id/textView4"
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
         </androidx.constraintlayout.widget.ConstraintLayout>

     </FrameLayout>


     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/shape_white_rounded_top"
         android:elevation="10dp"
         android:layout_weight="3"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="24dp">

             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/croissant_one_regular"
                 android:text="@string/login"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                 android:textColor="@color/primary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />


             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:elevation="10dp"
                 app:cardCornerRadius="15dp"
                 app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2">

                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:paddingBottom="16dp">

                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/etEmail"
                         style="?attr/textInputOutlinedStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="16dp"
                         android:hint="@string/email"
                         app:startIconDrawable="@drawable/mail"
                         app:endIconMode="custom"
                         app:errorEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:placeholderText="@string/your_email">

                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etEmailInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="textEmailAddress" />
                     </com.google.android.material.textfield.TextInputLayout>

                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/etPassword"
                         style="?attr/textInputOutlinedDenseStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:hint="@string/password"
                         app:endIconMode="password_toggle"
                         app:errorEnabled="true"
                         app:startIconDrawable="@drawable/lock"
                         app:layout_constraintEnd_toEndOf="@+id/etEmail"
                         app:layout_constraintStart_toStartOf="@+id/etEmail"
                         app:layout_constraintTop_toBottomOf="@+id/etEmail"
                         app:placeholderText="@string/your_password">

                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etPasswordInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="textPassword" />
                     </com.google.android.material.textfield.TextInputLayout>

                     <TextView
                         android:id="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/forgot_password"
                         android:textColor="@color/primary"
                         app:layout_constraintStart_toStartOf="@+id/etPassword"
                         app:layout_constraintTop_toBottomOf="@+id/etPassword" />

                     <TextView
                         android:id="@+id/txtResetPassword"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/reset_now"
                         android:fontFamily="@font/cairo_bold"
                         android:onClick="toForgetPassword"
                         android:textColor="@color/primary_dark"
                         app:layout_constraintStart_toEndOf="@+id/textView"
                         app:layout_constraintTop_toTopOf="@+id/textView" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>

             <Button
                 android:id="@+id/btnLogin"
                 style="@style/Widget.Material3.Button.IconButton.Filled"
                 android:textAppearance="@style/TextStyle"
                 android:layout_width="0dp"
                 android:paddingVertical="8dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:fontFamily="@font/cairo_bold"
                 android:onClick="loginOnClick"
                 android:text="@string/login"
                 app:layout_constraintBottom_toTopOf="@+id/textView6"
                 app:layout_constraintEnd_toEndOf="@+id/cardView"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/cardView" />

             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:textColor="@color/primary"
                 android:text="@string/do_not_have_an_account"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/btnLogin" />

             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/cairo_bold"
                 android:text="@string/register"
                 android:onClick="toRegisterOnClick"
                 android:textColor="@color/primary_dark"
                 app:layout_constraintBottom_toBottomOf="@+id/textView6"
                 app:layout_constraintStart_toEndOf="@+id/textView6"
                 app:layout_constraintTop_toTopOf="@+id/textView6"
                 app:layout_constraintVertical_bias="0.0" />


         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>

 </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>