<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterUserInfoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <include
                android:id="@+id/include"
                layout="@layout/include_app_bar_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/almost_done"
                android:textAlignment="center"
                android:textColor="@color/primary_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/include"
                app:layout_constraintStart_toStartOf="@+id/include"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etFirstName"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/first_name"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/etLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:placeholderText="@string/first_name"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLastName"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="24dp"
                android:hint="@string/last_name"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="@+id/etFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etFirstName"
                app:layout_constraintTop_toTopOf="@+id/etFirstName"
                app:placeholderText="@string/last_name"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPhone"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:hint="@string/phone"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/etLastName"
                app:layout_constraintStart_toStartOf="@+id/etFirstName"
                app:layout_constraintTop_toBottomOf="@+id/etLastName"
                app:placeholderText="@string/last_name"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnDateOfBirth"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="Date of birth"
                android:onClick="showDatePicker"
                android:textAppearance="@style/TextStyle"
                app:icon="@drawable/google"
                app:layout_constraintEnd_toEndOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="@+id/etPhone"
                app:layout_constraintTop_toBottomOf="@+id/etPhone" />


            <Button
                android:id="@+id/btnContinue"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/cairo_bold"
                android:onClick="continueRegistration"
                android:text="@string/continue_registration"
                android:textAppearance="@style/TextStyle"
                app:layout_constraintEnd_toEndOf="@+id/btnDateOfBirth"
                app:layout_constraintStart_toStartOf="@+id/btnDateOfBirth"
                app:layout_constraintTop_toBottomOf="@+id/btnDateOfBirth"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>